[package]
name = "rlox"
version = "0.1.0"
authors = ["Mike Perrow <zopu@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
strum = "0.21.0"
strum_macros = "0.21.0"
thiserror = "1.0.29"